interpreter-janeklang/tests/bad/06_noMain_6.janek
int i = 2;

int asd(){
    return 0;
}